<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/initializebackground"
    tools:context=".InitializeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:text="@string/start_party_description"
        android:textAlignment="gravity"
        android:textColor="#DFDFDF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061"
        tools:fontFamily="serif" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/enter_url_instruction"
        android:textColor="#7F708F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.662" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#9C27B0"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765">

        <EditText
            android:id="@+id/txtUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#85FAF6F6"
            android:drawableStart="@drawable/ic_link_24"
            android:ems="10"
            android:hint="@string/textFieldText"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textSize="16sp"
            tools:drawablePadding="12dp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonEscuchar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciarProceso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.603" />

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.082">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/internet" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>